# viettel_ai_race_task2

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt  run.py  score.py  serve.py
configs/: baseline.yaml  improved.yaml
data/dev/: README.md
data/dev/gold/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/dev/input/: 1.txt  10.txt  11.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/sample_input/: 12.txt
docs/: 01_problem.md  02_baseline.md  03_improved.md  appendix_host_tuning.md
notebooks/: colab_baseline.ipynb  colab_improved.ipynb
prompts/: assertion.jinja  candidate_rerank.jinja
src/medextract/: __init__.py  config.py  io_utils.py  pipeline.py  schema.py
src/medextract/assertions/: base.py  context_rules.py
src/medextract/kb/: build_icd.py  build_rxnorm.py  index.py
src/medextract/llm/: engine.py  prompt.py
src/medextract/ner/: base.py  gliner_ner.py  postprocess.py
src/medextract/normalization/: base.py  llm_reranker.py  retriever.py
src/medextract/scoring/: scorer.py
src/medextract/utils/: gpu.py
tests/: test_build_pipeline.py  test_context_rules.py  test_kb.py  test_ner_spans.py  test_postprocess.py  test_retriever_core.py  test_run_cli.py  test_schema.py  test_scorer.py
